7_type_checking/tests/invalid/unclosed_string.ennuyeux
fn main() {
    let s = "unclosed string;
}
